<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="osDetail"
            type="com.prem.ylan.viewmodel.IpAddressViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.IpAddress">


        <LinearLayout
            android:id="@+id/background_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/icon_lyout_ip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="horizontal" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="@color/black"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/_60sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/background_ip"
            app:layout_constraintEnd_toEndOf="@+id/background_ip"
            app:layout_constraintStart_toStartOf="@+id/background_ip"
            app:layout_constraintTop_toTopOf="@+id/background_ip"
            app:layout_constraintVertical_bias="0.26999998" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/ip_address"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
            app:layout_constraintHorizontal_bias="0.06"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_50sdp"
            android:hint="@string/enter_ip_address"
            android:textColorHint="@color/black"
            app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
            app:boxCornerRadiusBottomStart="@dimen/_8sdp"
            app:boxCornerRadiusTopEnd="@dimen/_8sdp"
            app:boxCornerRadiusTopStart="@dimen/_8sdp"
            app:hintTextColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/background_ip"
            app:layout_constraintVertical_bias="0.07999998"
            app:startIconDrawable="@drawable/icon_routing_ip">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/ip_edtv"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:inputType="number"
                android:digits="0123456789."
                android:maxLength="15"
                android:autofillHints="password"
                android:maxLines="1"
                android:importantForAutofill="auto"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_15sdp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/os_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/secondary_green"
            android:textSize="@dimen/_10ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:layout_constraintVertical_bias="0.060000002" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_ip_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:padding="@dimen/_10sdp"
            android:text="@string/save"
            android:textSize="@dimen/_13ssp"
            app:cornerRadius="@dimen/_8sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/os_tv"
            app:layout_constraintVertical_bias="0.07999998" />

        <TextView
            android:id="@+id/or_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/save_ip_btn"
            app:layout_constraintStart_toStartOf="@+id/save_ip_btn"
            app:layout_constraintTop_toBottomOf="@+id/save_ip_btn"
            app:layout_constraintVertical_bias="0.13999999" />

        <TextView
            android:id="@+id/get_ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_to_get_ip_address"
            android:textColor="@color/secondary_green"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            android:focusable="true"
            android:background="?selectableItemBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/or_tv"
            app:layout_constraintStart_toStartOf="@+id/or_tv"
            app:layout_constraintTop_toBottomOf="@+id/or_tv"
            app:layout_constraintVertical_bias="0.16000003" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

